# StudentEvaluationSystem

./: .env.production.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_REPORT.md  README.md  docker-compose.prod.yml  docker-compose.yml  run.bat
backend/: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  sample.xlsx  test_permissions.py
backend/student_evaluation_system/: manage.py  run_weight_suggestion.py  schema.yml
backend/student_evaluation_system/core/: admin.py  api_versioning.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/student_evaluation_system/evaluation/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/student_evaluation_system/student_evaluation_system/: celery.py  exception_handler.py  settings.py  urls.py
backend/student_evaluation_system/tests/: __init__.py  conftest.py  factories.py  pytest.ini  settings.py  test_account_provisioning.py  test_analytics.py  test_api_versioning.py  test_assignment_import_resolution_policy.py  test_assignment_score_validator.py  test_audit.py  test_auth_workflow.py  test_course_setup_workflow.py  test_course_templates.py  test_evaluation.py  test_exception_handler.py  test_file_import.py  test_file_import_endpoints.py  test_file_import_parser.py  test_file_import_policy.py  test_file_import_service.py  test_file_import_validation.py  test_grade_workflow.py  test_head_api.py  test_integration.py  test_models.py  test_permission_workflow.py  test_permissions.py  test_program_template_import.py  test_reports.py  test_seed_data.py  test_serializers.py  test_services.py  test_sse.py  test_term_transition.py  test_user_serializer_permissions.py  test_validation_phases.py  test_views.py  test_weight_suggestion.py  test_weight_suggestion_endpoint.py  (+2 more)
backend/student_evaluation_system/users/: admin.py  apps.py  models.py  (+5 more)
(+692 files in other folders)
